changed env as stable option has no src redirection folder

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -29,16 +29,11 @@
     
     'RS_STUDIO_ICONS':   '${RS_STUDIO_MAYA}/icons',
     'MAYA_PRESETS_PATH': '${RS_STUDIO_MAYA}/presets',
-    'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
-    'MAYA_PLUG_IN_PATH': { 'windows': '${RS_STUDIO_MAYA}/modules-dev/${MAYA_VERSION}-windows', },
+    'MAYA_PLUG_IN_PATH': { 'windows': '${MAYA_MODULE_PATH}/${MAYA_VERSION}-windows', },
      
     'MI_CUSTOM_SHADER_PATH': { 'windows': '${RS_STUDIO_MAYA}/mentalray/win64-$MAYA_VERSION/include', },
     
     # indirection envVars
-    
-    'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-    'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
-    'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
     
     'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
     
@@ -61,43 +56,79 @@
         'CHANNEL': 'stable',
         
         'RS_STUDIO_DEPLOY' :   '${RS_STUDIO_BASE}/${STUDIO_VERSION}',
-        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
+        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules',
+
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python;${RS_STUDIO_DEPLOY}',
+        'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel',
+
+        'RS_PY_SITE_PACKAGES': 'S:/dev_area/production/Envs/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'rc': {
         'CHANNEL': 'rc',
         
         'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
+
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'beta': {
         'CHANNEL': 'beta',
         
         'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
+
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'alpha': {
         'CHANNEL': 'alpha',
         
         'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
+
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'assetlib': {
         'CHANNEL': 'assetlib',
         
         'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-assetlib',
+        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
+
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'dev': {
         'CHANNEL': 'dev',
+
+        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
         
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
+
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
         
         'RS_IACTIVE_SHELF': '${RS_IACTIVE_TOOLS}/maya/scripts/shelves',
         
         'PYTHONPATH': '${RS_IACTIVE_TOOLS}/vred;'  \
-        '${RS_IACTIVE_TOOLS}/python;'  \
-        '${RS_IACTIVE_TOOLS}/maya;'  \
-        '${RS_IACTIVE_TOOLS}/maya/scripts',
+          '${RS_IACTIVE_TOOLS}/python;'  \
+          '${RS_IACTIVE_TOOLS}/maya;'  \
+          '${RS_IACTIVE_TOOLS}/maya/scripts',
         },
     },
 }
