added git dir env

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -10,6 +10,7 @@
     'PYTHON_VERSION': '2.7.9',
     'DEADLINE_STANDALONE': '${RS_SW_BASE}/deadline/Deadline7',
     'NIM_CONNECTOR': '${RS_SW_BASE}/NIM/nim_connector_v1-0-0-150810',
+    'GIT_DIR': '${RS_SW_BASE}/git/PortableGit-2.6.3-64-bit',
     
     'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
                        'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
@@ -17,7 +18,12 @@
     },
     'PATH': { 'darwin': '${MAYA_LOCATION}/bin',
                'linux': '${MAYA_LOCATION}/bin',
-             'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/;${MAYA_LOCATION}/Python/Lib/site-packages/pymel/tools/bin/', 
+             'windows': '${MAYA_LOCATION}/bin;'  \
+                        '${PYTHONHOME}/Scripts;'  \
+                        '${MAYA_LOCATION}/Python/Lib/site-packages/pymel/tools/bin;'  \
+                        'C:/Program Files/Common Files/Autodesk Shared/;'  \
+                        'C:/Program Files (x86)/Autodesk/Backburner;'  \
+                        '${GIT_DIR}/cmd',
     },
     'PYTHONHOME': { 'darwin': '${MAYA_LOCATION}/Python',
                      'linux': '${MAYA_LOCATION}/Python',
