updated pythonpath: - added iactive - fixed src/python

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -43,8 +43,6 @@
     
     'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
     
-    'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT};${DEADLINE_STANDALONE}/python;${NIM_CONNECTOR}',
-    
     'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
         'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
         'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
@@ -52,8 +50,17 @@
     
     # Interactive env
     
-    'RS_IACTIVE_TOOLS': 'S:/iactive',
-    
+    'RS_IACTIVE_TOOLS': 'I:/tools',
+    'PYTHONPATH': '${RS_PY_SITE_PACKAGES};'  \
+      '${RS_PY_TOOLS};'  \
+      '${RS_LAUNCHER};'  \
+      '${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT};'  \
+      '${DEADLINE_STANDALONE}/python;'  \
+      '${RS_IACTIVE_TOOLS};'  \
+      '${RS_IACTIVE_TOOLS}/vred;'  \
+      '${RS_IACTIVE_TOOLS}/python;'  \
+      '${RS_IACTIVE_TOOLS}/maya;'  \
+      '${NIM_CONNECTOR}',
     },
 
 'optional': {
@@ -61,11 +68,11 @@
         'STUDIO_VERSION': 'v0002',
         'CHANNEL': 'stable',
         
-        'RS_STUDIO_DEPLOY' :   '${RS_STUDIO_BASE}/${STUDIO_VERSION}',
+        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/${STUDIO_VERSION}',
         'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules',
 
         'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher',
-        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python;${RS_STUDIO_DEPLOY}',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python;${RS_STUDIO_DEPLOY}/python',
         'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel',
 
         'RS_PY_SITE_PACKAGES': 'S:/dev_area/production/Envs/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
@@ -73,11 +80,11 @@
     'rc': {
         'CHANNEL': 'rc',
         
-        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
-        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+        'RS_STUDIO_DEPLOY': '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'MAYA_MODULE_PATH': '${RS_STUDIO_MAYA}/modules-dev',
 
         'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
         'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
 
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
@@ -85,11 +92,11 @@
     'beta': {
         'CHANNEL': 'beta',
         
-        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
-        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+        'RS_STUDIO_DEPLOY': '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'MAYA_MODULE_PATH': '${RS_STUDIO_MAYA}/modules-dev',
 
         'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
         'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
 
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
@@ -97,11 +104,11 @@
     'alpha': {
         'CHANNEL': 'alpha',
         
-        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
-        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+        'RS_STUDIO_DEPLOY': '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'MAYA_MODULE_PATH': '${RS_STUDIO_MAYA}/modules-dev',
 
         'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
         'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
 
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
@@ -109,32 +116,29 @@
     'assetlib': {
         'CHANNEL': 'assetlib',
         
-        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-assetlib',
-        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+        'RS_STUDIO_DEPLOY': '${RS_STUDIO_BASE_DEV}/studio-assetlib',
+        'MAYA_MODULE_PATH': '${RS_STUDIO_MAYA}/modules-dev',
 
         'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
         'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
 
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'dev': {
         'CHANNEL': 'dev',
-
-        'MAYA_MODULE_PATH':  '${RS_STUDIO_MAYA}/modules-dev',
+        
+        # ${RS_STUDIO_DEPLOY} is defined in dev.env
+        'MAYA_MODULE_PATH': '${RS_STUDIO_MAYA}/modules-dev',
         
         'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
 
         'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src',
+        'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
         'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
         
         'RS_IACTIVE_SHELF': '${RS_IACTIVE_TOOLS}/maya/scripts/shelves',
         
-        'PYTHONPATH': '${RS_IACTIVE_TOOLS}/vred;'  \
-          '${RS_IACTIVE_TOOLS}/python;'  \
-          '${RS_IACTIVE_TOOLS}/maya;'  \
-          '${RS_IACTIVE_TOOLS}/maya/scripts',
         },
     },
 }
